# bat-stat

./: .gitignore  README.md  bat_stat.py  install.sh  pyproject.toml  uninstall.sh
src/: cli.py  constants.py  csv_log.py  example.py  formatting.py  logger.py  models.py  report.py  report_template.html  templates.py
